--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -12,6 +12,7 @@
     padding: 0px 16px;
     position: sticky;
     top:0;
+    z-index: 9;
     .header__left {
       max-width: 360px;
       display: flex;
