--- a/src/components/LeftBar/left-bar.scss
+++ b/src/components/LeftBar/left-bar.scss
@@ -8,7 +8,8 @@
         position: sticky;
         height: calc(100vh - calc($height-header + 20px));
         top:calc($height-header);
-        overflow: scroll;   
+        overflow: scroll;  
+        z-index: 1; 
         &::-webkit-scrollbar {
             background-color: transparent;
             width: 9px;
