--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,6 +3,19 @@
 .home {
     @include themify($themes) {
         margin: 0px 150px;
-        
+        @include desktop-xl {
+            & {
+                margin: 0px 0px 0px 10px;
+                max-width: 540px;
+                width: 100%;
+            }
+        }
+
+        @include desktop {
+            & {
+               margin: auto;
+               padding: 0px 10px;
+            }
+        }
     }
 }
