--- a/src/components/Stories/stories.scss
+++ b/src/components/Stories/stories.scss
@@ -22,6 +22,14 @@ box-shadow: 0px 0px 32px -12px rgba(0,0,0,0.92);
       gap:5px;
       justify-content: center;
       color:gray;
+      cursor: pointer;
+      transition: background-color 0.2 linear;
+      width: 100%;
+      height: calc(100% - 12px);
+      border-radius: 10px;  
+      &:hover {
+        background-color: rgba(0,0,0,0.2);
+      }
       &__icon {
         font-size: 2.2rem;
       }
@@ -31,7 +39,6 @@ box-shadow: 0px 0px 32px -12px rgba(0,0,0,0.92);
       &.select  {
           position: relative;
           width: 100%;
-          height: 100%;
           &::after {
               position: absolute;
               content: "";
@@ -39,7 +46,7 @@ box-shadow: 0px 0px 32px -12px rgba(0,0,0,0.92);
               width: 100%;
               height: 3px;
               background-color: $primary-color;
-              bottom: 0px;
+              bottom: -5px;
           }
           .stories-menu__item__icon {
             color:$primary-color;
@@ -54,9 +61,9 @@ box-shadow: 0px 0px 32px -12px rgba(0,0,0,0.92);
 
 .stories {
   @include themify($themes) {
-    display: flex;
+    display: none;
     padding: 20px;
-    width: 664px;
+    max-width: 664px;
     overflow: hidden;
     margin-bottom: 20px;
     background-color: themed(bg);
@@ -67,6 +74,16 @@ box-shadow: 0px 0px 32px -8px rgba(0,0,0,0.92);
    height: 240px;
    gap:6px;
    position: relative;
+
+   &.select {
+    display: flex;
+
+    & .swiper-slide {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+   }
    &__story {
 
     height: 200px;
