--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,6 +3,7 @@
 $height-header: 56px;
 $primary-color:#1b74e4;
 // breakpoints
-$desktop:992px;
+$desktop-xl:1280px;
+$desktop:1024px;
 $tablet:768px;
 $mobile:576px;
