--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,6 +3,7 @@
 .home {
     @include themify($themes) {
         margin: 0px 150px;
+        flex:1;
         @include desktop-xl {
             & {
                 margin: 0px 0px 0px 10px;
