--- a/src/components/Header/Account/account.scss
+++ b/src/components/Header/Account/account.scss
@@ -6,7 +6,6 @@
     position: absolute;
     top: 120%;
     left: -330px;
-    background-color: red;
     -webkit-box-shadow: 1px 3px 16px 2px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 1px 3px 16px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 1px 3px 16px 2px rgba(0, 0, 0, 0.3);
@@ -20,7 +19,9 @@
       gap: 10px;
       padding: 10px 10px;
       align-items: center;
-
+      h3 {
+        font-size: 2rem;
+      }
       &__back {
         font-size: 1.2rem;
         width: 40px;
@@ -55,16 +56,17 @@
         background-color: rgba(0, 0, 0, 0.1);
       }
       img {
-        width: 37px;
-        height: 37px;
-        object-fit: cover;
+        width: 37px!important;
+        height: 37px!important;
+        object-fit: cover!important;
         border-radius: 50%;
-        border: 0.1px solid themed(textColor);
+        border: 0.1px solid themed(textColor)!important;
       }
 
       &__name {
-        font-size: 1.6rem;
-        font-weight: 500;
+        font-size: 1.6rem!important;
+        font-weight: 500!important;
+        color:themed(textColor);
       }
     }
     &__futures {
@@ -91,16 +93,17 @@
           align-items: center;
           font-size: 1.4rem;
           font-weight: 500;
-
           &__icon {
             width: 40px;
             height: 40px;
             border-radius: 50%;
             background-color: themed(bgSoft);
+            color:themed(bgColor)!important;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 2rem;
+            
           }
           &__text-other {
             position: absolute;
@@ -124,6 +127,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+
+            span {
+              font-size: 1.5rem;
+              padding: 2px 5px;
+            }
             &__turn-on {
               display: block;
               width: 15px;
