--- a/src/style.scss
+++ b/src/style.scss
@@ -6,13 +6,16 @@
     box-sizing: border-box;
 }
 html {
-    max-width: 100%;
-    max-height: 100vh;
+    width: 100%;
+    height: 100vh;
     font-size: 62.5%;
     font-family: 'Montserrat', sans-serif;
 }
 body {
     font-size: 1.6rem;
+    &::-webkit-scrollbar {
+      display: none;
+  }
 }
 a {
     text-decoration: none;
