--- a/src/components/RightBar/right-bar.scss
+++ b/src/components/RightBar/right-bar.scss
@@ -39,7 +39,7 @@
                 display: flex;
                 gap:22px;
                 font-size: 1.8rem;
-                color:rgba(0, 0, 0, 0.5)
+                color:themed(textColorSoft);
             }
         }
 
