--- a/src/components/Header/Account/account.scss
+++ b/src/components/Header/Account/account.scss
@@ -134,19 +134,23 @@
             }
             &__turn-on {
               display: block;
-              width: 15px;
-              height: 15px;
+              width: 14px;
+              height: 14px;
               background-color: greenyellow;
               border: 1px solid themed(textColor);
               border-radius: 50%;
               padding: 5px;
             }
             &__turn-off{
-                width: 15px;
-                height: 15px;
-                padding: 5px;
+                width: 30px;
+                height: 30px;
+                padding: 10px;
                 border: 1px solid themed(textColor);
                 border-radius: 50%;
+              transition: background-color 0.1s linear;
+                &:hover {
+                  background-color: rgba(172, 255, 47, 0.154);
+                }
             }
           }
         }
