--- a/src/components/Header/HeaderRight/header-right.scss
+++ b/src/components/Header/HeaderRight/header-right.scss
@@ -31,11 +31,10 @@
         }
       }
 
-      & .text-hover {
+      &>.text-hover {
         display: none;
       }
-
-      &:hover .text-hover {
+       &:hover>.text-hover {
         display: flex;
         align-items: center;
         justify-content: center;
