--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,7 @@ a {
     color: inherit;
 }
 
-.screen-large-992-node {
+.screen-large-992-none {
     display: none!important;
   }
   @include mobile {
