--- a/src/components/Header/HeaderRight/header-right.scss
+++ b/src/components/Header/HeaderRight/header-right.scss
@@ -21,7 +21,7 @@
       transition: all 0.1s linear;
       cursor: pointer;
       &:hover {
-          background-color: rgba(0,0,0,0.1);
+          background-color: $gray-light;
       }
       &.select {
         background-color: rgba(0, 170, 255, 0.364);
