--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -109,7 +109,7 @@
           display: flex;
         }
         &:hover {
-          background-color: rgba(0,0,0,0.1);
+          background-color: $gray-light;
           height: 80%;
           border-radius: 15px;
           display: flex;
