--- a/src/components/LeftBar/left-bar.scss
+++ b/src/components/LeftBar/left-bar.scss
@@ -61,7 +61,7 @@
             }
             transition: background-color 0.1s linear;
             &:hover {
-                background-color: rgba(0,0,0,0.1);
+                background-color: $gray-light;
                 cursor: pointer;
             }
 
