--- a/src/components/Stories/Create/create.scss
+++ b/src/components/Stories/Create/create.scss
@@ -141,7 +141,7 @@
                 }
 
                 &:hover {
-                    background-color: rgba(0,0,0,0.1);
+                    background-color: $gray-light;
                 }
             }
 
