--- a/src/components/RightBar/right-bar.scss
+++ b/src/components/RightBar/right-bar.scss
@@ -6,9 +6,22 @@
     padding: 0px 20px;
     height: calc(100vh - calc($height-header + 20px));
     top:calc($height-header);
-    overflow: scroll;  
+    overflow-y: scroll;  
     z-index: 1; 
+    position: sticky;
+    &::-webkit-scrollbar {
+        background-color: transparent;
+        width: 9px;
+    }
 
+    &::-webkit-scrollbar-thumb {
+        background-color: rgba(128, 128, 128, 0.61);
+        width: 9px;
+        border-radius: 20px;
+    }
+    &::-webkit-resizer {
+        resize: both;
+    }
     @include desktop {
         & {
             padding: 0px 10px 0px 20px;
