--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -121,4 +121,9 @@
         font-weight: 700;
         margin: 0px 100px;
     }
+
+    .err-account {
+        color:red;
+        font-weight: 300;
+    }
 }
