--- a/src/components/Header/HeaderRight/header-right.scss
+++ b/src/components/Header/HeaderRight/header-right.scss
@@ -44,8 +44,9 @@
       height: 100%;
       border-radius: 50%;
       position: relative;
+      object-fit: cover;
       img {
-        max-width: 100%;
+        width: 100%;
         height: 100%;
         object-fit: contain;
       }
