--- a/src/components/Share/CreatePost/create-post.scss
+++ b/src/components/Share/CreatePost/create-post.scss
@@ -44,8 +44,9 @@
           justify-content: center;
           width: 40px;
           height: 40px;
-          background-color: rgba(0, 0, 0, 0.1);
+          background-color: themed(textColor);
           border-radius: 50%;
+          color:themed(bg);
           top: 50%;
           right: 0px;
           transform: translateY(-50%);
