--- a/src/components/Comments/commnents.scss
+++ b/src/components/Comments/commnents.scss
@@ -4,7 +4,7 @@
   @include themify($themes) {
     padding: 10px;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 10px;
     position: relative;
     &__comment {
