--- a/src/components/Posts/posts.scss
+++ b/src/components/Posts/posts.scss
@@ -4,7 +4,7 @@
     @include themify($themes) {
         display: flex;
         flex-direction: 10px;
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap:20px;
         margin-top: 20px;
         max-width: 100%;
