--- a/src/components/LeftBar/left-bar.scss
+++ b/src/components/LeftBar/left-bar.scss
@@ -16,19 +16,7 @@
                 display: none;
             }
         }
-        &::-webkit-scrollbar {
-            background-color: transparent;
-            width: 9px;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            background-color: rgba(128, 128, 128, 0.61);
-            width: 9px;
-            border-radius: 20px;
-        }
-        &::-webkit-resizer {
-            resize: both;
-        }
+        @include webkit-bar;
         &__items {
             display: flex;
             flex-direction: column;
