--- a/src/components/notification/notification.scss
+++ b/src/components/notification/notification.scss
@@ -19,19 +19,7 @@
         overflow: auto;
         height: 80vh;
         flex-direction: column;
-        &::-webkit-scrollbar {
-            background-color: transparent;
-            width: 9px;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            background-color: rgba(128, 128, 128, 0.61);
-            width: 9px;
-            border-radius: 20px;
-        }
-        &::-webkit-resizer {
-            resize: both;
-        }
+        @include webkit-bar;
         &__header {
             display: flex;
             align-items: center;
