--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -78,3 +78,18 @@ $themes: (
   justify-content: center;
 }
 
+@mixin webkit-bar {
+  &::-webkit-scrollbar {
+    background-color: transparent;
+    width: 9px;
+}
+
+&::-webkit-scrollbar-thumb {
+    background-color: rgba(128, 128, 128, 0.61);
+    width: 9px;
+    border-radius: 20px;
+}
+&::-webkit-resizer {
+    resize: both;
+}
+}
