--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,6 +4,7 @@
     @include themify($themes) {
         margin: 0px 150px;
         flex:1;
+      
         @include desktop-xl {
             & {
                 margin: 0px 0px 0px 10px;
@@ -16,7 +17,14 @@
             & {
                margin: auto;
                padding: 0px 10px;
+              
             }
         }
+
+        @include mobile {
+            @include flex-center;
+            flex-direction: column;
+        }
+
     }
 }
