--- a/src/components/Stories/Create/create.scss
+++ b/src/components/Stories/Create/create.scss
@@ -203,5 +203,23 @@
         & .menu {
             left: -470px;
         }
+
+        &__back {
+            position: absolute;
+            top:10px;
+            left: 10px;
+            width: 45px;
+            height: 45px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            img {
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                object-fit: cover;
+            }
+        }
     }
 }
