--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -19,17 +19,24 @@
       gap: 5px;
       align-items: center;
       flex:1;
+
+      
       @include desktop-xl  {
         & {
           max-width: 390px;
         }
       }
 
-     
+     &__logo {
+      width: 45px;
+      height: 45px;
+      border-radius:50% ;
+     }
       img {
-        max-width: 45px;
-        height: 45px;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
+        border-radius:50% ;
         cursor: pointer;
       }
 
