--- a/src/style.scss
+++ b/src/style.scss
@@ -33,6 +33,14 @@ a {
       display: flex!important;
     }
   }
+  @include tablet {
+    .tablet-none {
+      display: none!important;
+    }
+    .tablet-display {
+      display: flex!important;
+    }
+  }
 
 
 
@@ -61,57 +69,6 @@ a {
 
 
 
-  
-
-.skeleton-avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%!important;
-  cursor: default!important;
-  &:hover {
-    background-color: unset!important;
-    border:1px solid transparent!important;
-  }
-  span {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-  }
-}
-
-.skeleton-name {
-  width: 100px!important;
-  width: 30px;
-
-  span {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-
-.skeleton-desc {
-  width: 200px!important;
-  width: 50px;
-  margin-top: 10px;
-  span {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.skeleton-time {
-  width: 100%!important;
-  height: 20px;
-  margin-top: 10px;
-  display: flex;
-  justify-content: flex-end;
-  span {
-    width: 60%;
-    height: 100%;
-    display: flex;
-  }
-}
 
 video {
   width: 100%;
