--- a/src/components/LoadingSkeleton/loading-skeleton.scss
+++ b/src/components/LoadingSkeleton/loading-skeleton.scss
@@ -4,12 +4,17 @@
 .loading-wrapper {
     width: 100%;
     height: 100%;
+  
     & .react-loading-skeleton {
         height: 100%;
         width: 100%;
         line-height: 1;
         padding: auto;
+        align-items: center;
+        
     }
+
+   
 }
 
 
