--- a/src/components/Stories/Create/create.scss
+++ b/src/components/Stories/Create/create.scss
@@ -14,7 +14,7 @@
             box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
             background-color: themed(bgSoft);
             height: 100vh;
-
+            position: relative;
             @include desktop {
                 display:none;
             }
@@ -103,6 +103,54 @@
                     }
                 }
             }
+
+            &__btns {
+                position: absolute;
+                bottom:0px;
+                left: 0;
+              right: 0;
+              -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+            -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+            box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+            background-color: themed(bgSoft);
+              padding:  10px;
+            }
+
+            &__add-text {
+                padding: 15px;
+                margin: 10px;
+                display: flex;
+                gap:10px;
+                align-items: center;
+                border-radius: 10px;
+                cursor: pointer;
+                position: relative;
+                transition: background-color 0.2s linear;
+                &:hover {
+                    background-color: rgba(128, 128, 128, 0.122);
+                }
+
+                &::after {
+                    position: absolute;
+                    content: "";
+                    top:-10px;
+                    left: 0;
+                    right: 0;
+                    height: 1px;
+                    width: 100%;
+                    background-color: themed(border);
+                }
+
+                span {
+                    @include flex-center;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+                    background-color: gray;
+                    svg {color:themed(bg);}
+                }
+
+            }
         }
 
         &__right {
@@ -118,9 +166,13 @@
                 -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
                 box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
                 background-color: themed(bgSoft);
-                width: 70%;
+                width: 80%;
                 display: flex;
                 padding: 20px;
+                flex-direction: column;
+                gap:10px;
+                height: 85%;
+                border-radius: 10px;
                 &__title {
                     font-size: 1.6rem;
                     font-weight: 300;
@@ -129,6 +181,96 @@
                 &__background {
                     background-color: black;
                     width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 40px;
+                    border-radius: 20px;
+                    position: relative;
+
+                   
+                       
+                   
+
+                    &__progress {
+                        position: absolute;
+                        bottom: 10px;
+                        left:50%;
+                        transform: translateX(-50%);
+                        display: flex;
+                        align-items: center;
+                        gap:5px;
+                        width: 30%;
+                        height: 5px;
+                        button {
+                            width: 30px;
+                        }
+                        &__value {
+                            flex:1;
+                            background-color: gray;
+                            display: flex;
+                            height: 100%;
+                            position: relative;
+
+                            &__bar {
+                                position: absolute;
+                                background-color: blue;
+                                height: 100%;
+                                width: 20%;
+                                display: flex;
+                            }
+
+                            &__circle {
+                                position: absolute;
+                                background-color: white;
+                                border-radius: 50%;
+                                height: 20px;
+                                width: 100%;
+                                display: flex;
+                               top:50%;
+                               transform: translateY(-50%) ;
+                            }
+                        }
+                    }
+                    &__image {
+                        width: 35%;
+                        height: 100%;
+                       display: flex;
+                       position: relative;
+                       align-items: center;
+                       justify-content: center;
+                        border: 1.4px solid white;
+                        cursor: pointer;
+                        border-radius: 5px;
+                        img {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            border-radius: 5px;
+                        }
+
+                        &__desc {
+                            position: absolute;
+                            top:50px;
+                            left: 50%;
+                            transform: translateX(-50%);
+                            color:white;
+                            font-weight: bold;
+                            font-size: 2rem;
+                            width: 100%;
+                            
+                            p {
+                                &:empty:not(:focus)::before {
+                                    content: attr(data-placeholder);
+                                  }
+                                cursor: default;
+                                display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            }
+                        }
+                    }
                 }
             }
             &__create {
